# my-library-fastapi

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 46a0797d8fa7_initial.py  9272a83eb64e_book_keyword_col.py  daa49ade0391_nullable_columns.py
src/: __init__.py
src/my_library/: main.py
src/my_library/classes/: book.py  enums.py  orm_classes.py
src/my_library/routers/: books.py  views.py
src/my_library/services/: books.py  db_engine.py  repository.py
src/my_library/static/: styles.css
src/my_library/views/: base_wrapper.html  book-detail.html  book-editor.html  detail-modal.html  list.html  login.html  navbar.html  new-book.html  overview.html
