[project]
name = "my-library"
version = "0.1.0"
description = ""
authors = [
    {name = "Stephan Knopp",email = "stephan_knopp@yahoo.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "alembic (>=1.16.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "my_library", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
